--- a/src/App.css
+++ b/src/App.css
@@ -21,13 +21,11 @@
   border: none;
   border-bottom: 1px solid white;
   outline: none;
-  /* background: #67787d; */
-  min-width: 300px;
+  min-width: 40vw;
   height: 30px;
   padding: 0 10px;
-
-
 }
+
 .add {
   height: 30px;
   min-width:100px;
@@ -37,7 +35,6 @@
 
 }
 .add:hover{
-  /* border: 1px solid 	#505a56; */
   background: whitesmoke;
   color: #505a56;
 
@@ -47,10 +44,11 @@
   top: 50px;
   font-size: 36px;
 
+
 }
 .tasks__item{
   margin-top: 5px;
-  min-width: 400px;
+  min-width: 40vw;
   border-radius: 5px;
   font-size: 24px;
 
@@ -87,3 +85,14 @@
   background: whitesmoke;
   color: #505a56;
 }
+@media (max-width: 730px) {
+  .todo__wrapper input{
+    min-width: 55vw;
+  }
+
+  .tasks__item{
+    min-width: 70vw;
+    padding-right: 50px;
+  }
+}
+
